# All folders for internal inkscape
# these call add_inkscape_source
#add_subdirectory(debug)
#add_subdirectory(display)
#add_subdirectory(extension)
#add_subdirectory(helper)
#add_subdirectory(io)
#add_subdirectory(live_effects)
#add_subdirectory(svg)
#add_subdirectory(trace)
#add_subdirectory(util)
#add_subdirectory(widgets)
#add_subdirectory(xml)

# Directories containing lists files that describe building internal libraries
#add_subdirectory(libavoid)
#add_subdirectory(libcola)
#add_subdirectory(libcroco)
#add_subdirectory(libuemf)
#add_subdirectory(libvpsc)
#add_subdirectory(livarot)
#add_subdirectory(libdepixelize)

subdir('2geom')
subdir('helper')
subdir('inkgc')
subdir('libnrtype')
subdir('object')
subdir('ui')

srcdir_sources = files([
  'attribute-rel-css.cpp',
  'attribute-rel-svg.cpp',
  'attribute-rel-util.cpp',
  'attribute-sort-util.cpp',
  'attributes.cpp',
  'axis-manip.cpp',
  'color.cpp',
  'composite-undo-stack-observer.cpp',
  'conditions.cpp',
  'conn-avoid-ref.cpp',
  'console-output-undo-observer.cpp',
  'context-fns.cpp',
  'desktop-events.cpp',
  'desktop-style.cpp',
  'desktop.cpp',
  'device-manager.cpp',
  'dir-util.cpp',
  'document-subset.cpp',
  'document-undo.cpp',
  'document.cpp',
  'ege-color-prof-tracker.cpp',
  'event-log.cpp',
  'extract-uri.cpp',
  'file.cpp',
  'file-update.cpp',
  'filter-chemistry.cpp',
  'filter-enums.cpp',
  'gc-anchored.cpp',
  'gc-finalized.cpp',
  'gradient-chemistry.cpp',
  'gradient-drag.cpp',
  'graphlayout.cpp',
  'guide-snapper.cpp',
  'help.cpp',
  'id-clash.cpp',
  'inkscape.cpp',
  'knot-holder-entity.cpp',
  'knot-ptr.cpp',
  'knot.cpp',
  'knotholder.cpp',
  'layer-fns.cpp',
  'layer-manager.cpp',
  'layer-model.cpp',
  'line-geometry.cpp',
  'line-snapper.cpp',
  'main-cmdlineact.cpp',
  'main-cmdlinexact.cpp',
  'media.cpp',
  'message-context.cpp',
  'message-stack.cpp',
  'mod360.cpp',
  'object-hierarchy.cpp',
  'object-snapper.cpp',
  'path-chemistry.cpp',
  'path-prefix.cpp',
  'perspective-line.cpp',
  'preferences.cpp',
  'prefix.cpp',
  'print.cpp',
  'profile-manager.cpp',
  'proj_pt.cpp',
  'pure-transform.cpp',
  'rdf.cpp',
  'removeoverlap.cpp',
  'resource-manager.cpp',
  'rubberband.cpp',
  'satisfied-guide-cns.cpp',
  'selcue.cpp',
  'selection-chemistry.cpp',
  'selection-describer.cpp',
  'selection.cpp',
  'seltrans-handles.cpp',
  'seltrans.cpp',
  'shortcuts.cpp',
  'snap-preferences.cpp',
  'snap.cpp',
  'snapped-curve.cpp',
  'snapped-line.cpp',
  'snapped-point.cpp',
  'snapper.cpp',
  'splivarot.cpp',
  'sp-cursor.cpp',
  'sp-item-notify-moveto.cpp',
  'style-internal.cpp',
  'style.cpp',
  'svg-view-slideshow.cpp',
  'svg-view-widget.cpp',
  'svg-view.cpp',
  'text-chemistry.cpp',
  'text-editing.cpp',
  'transf_mat_3x4.cpp',
  'unclump.cpp',
  'unicoderange.cpp',
  'vanishing-point.cpp',
  'verbs.cpp',
  'version.cpp'
])

srcdir_headers = files([
  'attribute-rel-css.h',
  'attribute-rel-svg.h',
  'attribute-rel-util.h',
  'attribute-sort-util.h',
  'attributes.h',
  'axis-manip.h',
  'bad-uri-exception.h',
  'cms-color-types.h',
  'cms-system.h',
  'color-profile-cms-fns.h',
  'color-rgba.h',
  'color.h',
  'colorspace.h',
  'composite-undo-stack-observer.h',
  'conditions.h',
  'conn-avoid-ref.h',
  'console-output-undo-observer.h',
  'context-fns.h',
  'decimal-round.h',
  'desktop-events.h',
  'desktop-style.h',
  'desktop.h',
  'device-manager.h',
  'dir-util.h',
  'document-private.h',
  'document-subset.h',
  'document-undo.h',
  'document.h',
  'ege-color-prof-tracker.h',
  'enums.h',
  'event-log.h',
  'event.h',
  'extract-uri.h',
  'file.h',
  'fill-or-stroke.h',
  'filter-chemistry.h',
  'filter-enums.h',
  'gc-anchored.h',
  'gc-finalized.h',
  'gradient-chemistry.h',
  'gradient-drag.h',
  'graphlayout.h',
  'guide-snapper.h',
  'help.h',
  'helper-fns.h',
  'id-clash.h',
  'inkscape-version.h',
  'inkscape.h',
  'knot-enums.h',
  'knot-holder-entity.h',
  'knot-ptr.h',
  'knot.h',
  'knotholder.h',
  'layer-fns.h',
  'layer-manager.h',
  'layer-model.h',
  'line-geometry.h',
  'line-snapper.h',
  'macros.h',
  'main-cmdlineact.h',
  'main-cmdlinexact.h',
  'media.h',
  'menus-skeleton.h',
  'message-context.h',
  'message-stack.h',
  'message.h',
  'mod360.h',
  'number-opt-number.h',
  'object-hierarchy.h',
  'object-snapper.h',
  'path-chemistry.h',
  'path-prefix.h',
  'perspective-line.h',
  'preferences-skeleton.h',
  'preferences.h',
  'prefix.h',
  'print.h',
  'profile-manager.h',
  'proj_pt.h',
  'pure-transform.h',
  'rdf.h',
  'remove-last.h',
  'removeoverlap.h',
  'resource-manager.h',
  'rubberband.h',
  'satisfied-guide-cns.h',
  'selcue.h',
  'selection-chemistry.h',
  'selection-describer.h',
  'selection.h',
  'seltrans-handles.h',
  'seltrans.h',
  'shortcuts.h',
  'snap-candidate.h',
  'snap-enums.h',
  'snap-preferences.h',
  'snap.h',
  'snapped-curve.h',
  'snapped-line.h',
  'snapped-point.h',
  'snapper.h',
  'sp-cursor.h',
  'sp-guide-attachment.h',
  'sp-guide-constraint.h',
  'sp-item-notify-moveto.h',
  'splivarot.h',
  'streq.h',
  'strneq.h',
  'style-enums.h',
  'style-internal.h',
  'style.h',
  'svg-profile.h',
  'svg-view-slideshow.h',
  'svg-view-widget.h',
  'svg-view.h',
  'syseq.h',
  'text-chemistry.h',
  'text-editing.h',
  'text-tag-attributes.h',
  'transf_mat_3x4.h',
  'unclump.h',
  'undo-stack-observer.h',
  'unicoderange.h',
  'vanishing-point.h',
  'verbs.h',
  'version.h'
])

srcdir_deps = [
  gtkmm_dep,
  glibmm_dep,
  gdl_dep,
  xml2_dep,
  sigcpp_dep,
  libhelper_dep
]

lib_srcdir = static_library('srcdir',
  sources: [srcdir_sources,
            srcdir_headers],
  dependencies: srcdir_deps,
  include_directories: [srcinc, confinc, helperinc])

libsrcdir_dep = declare_dependency(link_with : lib_srcdir)
